--- a/Backend-SpringBoot/src/main/resources/application.properties
+++ b/Backend-SpringBoot/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=Urban-Jungle
+
+server.port=8080
+
+#spring.security.user.name=revanth
+#spring.security.user.password=revanth
+
+#spring.datasource.url=jdbc:postgresql://192.168.0.122:5432/postgres
+spring.datasource.url=jdbc:postgresql://ep-misty-frog-333875.us-west-2.aws.neon.tech/main
+spring.datasource.username=rohit20001221
+spring.datasource.password=WhM07AHtdXJC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
