--- a/Backend-SpringBoot/src/main/resources/application.properties
+++ b/Backend-SpringBoot/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.username=rohit20001221
 spring.datasource.password=WhM07AHtdXJC
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.security.oauth2.client.registration.google.clientId=833526689438-ulkroa81smqr629i2akgjvfuflnqrku1.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.clientSecret=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
