--- a/Backend-SpringBoot/src/main/resources/application.properties
+++ b/Backend-SpringBoot/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=8080
 #spring.security.user.password=revanth
 
 #spring.datasource.url=jdbc:postgresql://192.168.0.122:5432/postgres
-spring.datasource.url=jdbc:postgresql://ep-misty-frog-333875.us-west-2.aws.neon.tech/main
-spring.datasource.username=rohit20001221
-spring.datasource.password=WhM07AHtdXJC
+spring.datasource.url=${db_url}
+spring.datasource.username=${db_username}
+spring.datasource.password=${db_password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
